# otpc

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: commands.rs  config.rs  main.rs  otp.rs  qrcode.rs
