[package]
name = "otpc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3      # 최대 최적화 레벨
lto = true         # 링크 타임 최적화 활성화
codegen-units = 1  # 코드 생성 유닛 수를 줄여 잠재적으로 더 나은 최적화 (컴파일 시간 증가)
panic = 'abort'    # 패닉 시 스택 해제 대신 중단 (바이너리 크기 감소)
strip = true       # 바이너리에서 심볼 제거

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
toml = "0.8.20"
serde = { version = "^1.0.219", features = ["derive"] }
anyhow = "1.0.97"
rqrr = "0.9.3"
image = "0.25.6"