[package]
name = "otpc"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true       # 바이너리에서 심볼 제거

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
toml = "0.8.20"
serde = { version = "^1.0.219", features = ["derive"] }
anyhow = "1.0.97"
rqrr = "0.9.3"
image = "0.25.6"